fix header. comments

--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
     <!-- Main -->
 
     <main>
-      <!--Solutions section-->
+      <!--Header section-->
 
-      <section class="section solutions overlay">
+      <section class="section header-section overlay">
         <div class="container">
-          <h1 class="solutions-title">Эффективные решения для вашего бизнеса</h1>
-          <button type="button" class="solutions-btn">Заказать услугу</button>
+          <h1 class="header-title">Эффективные решения для вашего бизнеса</h1>
+          <button type="button" class="header-btn">Заказать услугу</button>
         </div>
       </section>
 
