script config, nav shadow

--- a/index.html
+++ b/index.html
@@ -549,5 +549,7 @@
         </div>
       </div>
     </footer>
+    <!-- Scripts config -->
+    <script src="./js/modal.js"></script>
   </body>
 </html>
