--- a/index.html
+++ b/index.html
@@ -63,7 +63,17 @@
       <section class="section header-section overlay">
         <div class="container">
           <h1 class="header-title">Эффективные решения для вашего бизнеса</h1>
-          <button type="button" class="header-btn">Заказать услугу</button>
+          <button type="button" class="header-btn" data-modal-open>Заказать услугу</button>
+        </div>
+        <!-- Modal -->
+        <div class="backdrop is-hidden" data-modal>
+          <div class="modal">
+            <button type="button" class="close-btn" data-modal-close>
+              <svg class="close-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-close"></use>
+              </svg>
+            </button>
+          </div>
         </div>
       </section>
 
