--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ua">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -28,9 +28,9 @@
 
         <nav class="navigation">
           <ul class="nav-menu">
-            <li class="nav-item"><a class="nav-link active" href="./index.html">Студия</a></li>
-            <li class="nav-item"><a class="nav-link" href="./portfolio.html">Портфолио</a></li>
-            <li class="nav-item"><a class="nav-link" href="#contacts">Контакты</a></li>
+            <li class="nav-item"><a class="nav-link active" href="./index.html">Студія</a></li>
+            <li class="nav-item"><a class="nav-link" href="./portfolio.html">Портфоліо</a></li>
+            <li class="nav-item"><a class="nav-link" href="#contacts">Контакти</a></li>
           </ul>
         </nav>
 
@@ -62,8 +62,8 @@
 
       <section class="section header-section overlay">
         <div class="container">
-          <h1 class="header-title">Эффективные решения для вашего бизнеса</h1>
-          <button type="button" class="header-btn" data-modal-open>Заказать услугу</button>
+          <h1 class="header-title">Ефективні рішення для вашого бізнесу</h1>
+          <button type="button" class="header-btn" data-modal-open>Замовити послугу</button>
         </div>
         <!-- Modal -->
         <div class="backdrop is-hidden" data-modal>
@@ -83,54 +83,54 @@
         <div class="container">
           <!--Hiden title-->
 
-          <h2 class="visually-hidden">Особенности</h2>
+          <h2 class="visually-hidden">Особливості</h2>
 
           <ul class="peculiarities-items">
             <li class="peculiarities-item">
-              <div class="peculiarities-thumb">
+              <div class="peculiarities-direct">
                 <svg class="peculiarities-icon" width="70" height="70">
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
-              <h3 class="peculiarities-title">Внимание к деталям</h3>
+              <h3 class="peculiarities-title">увага до деталей</h3>
               <p class="peculiarities-descr">
-                Идейные соображения, а также начало повседневной работы по формированию позиции.
+                Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
               </p>
             </li>
 
             <li class="peculiarities-item">
-              <div class="peculiarities-thumb">
+              <div class="peculiarities-direct">
                 <svg class="peculiarities-icon" width="70" height="70">
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
-              <h3 class="peculiarities-title">Пунктуальность</h3>
+              <h3 class="peculiarities-title">Пунктуальність</h3>
               <p class="peculiarities-descr">
-                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+                Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
               </p>
             </li>
 
             <li class="peculiarities-item">
-              <div class="peculiarities-thumb">
+              <div class="peculiarities-direct">
                 <svg class="peculiarities-icon" width="70" height="70">
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
-              <h3 class="peculiarities-title">Планирование</h3>
+              <h3 class="peculiarities-title">Планування</h3>
               <p class="peculiarities-descr">
-                Равным образом консультация с широким активом в значительной степени обуславливает.
+                Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
 
             <li class="peculiarities-item">
-              <div class="peculiarities-thumb">
+              <div class="peculiarities-direct">
                 <svg class="peculiarities-icon" width="70" height="70">
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
-              <h3 class="peculiarities-title">Современные технологии</h3>
+              <h3 class="peculiarities-title">Сучасні технології</h3>
               <p class="peculiarities-descr">
-                Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+                Значимість цих проблем настільки очевидна, що реалізація планових завдань.
               </p>
             </li>
           </ul>
@@ -141,18 +141,27 @@
 
       <section class="section doing no-top-padding">
         <div class="container">
-          <h2 class="doing-title">Чем мы занимаемся</h2>
+          <h2 class="doing-title">Чим ми займаємося</h2>
           <ul class="doing-items">
             <li class="doing-item">
-              <img src="./images/doing/working-table.jpg" width="370" height="294" alt="table" />
+              <div class="doing-thumb">
+                <img src="./images/doing/working-table.jpg" width="370" height="294" alt="table" />
+                <h3 class="doing-subtitle">Десктопні додатки</h3>
+              </div>
             </li>
 
             <li class="doing-item">
-              <img src="./images/doing/phone-laptop.jpg" width="370" height="294" alt="laptop" />
+              <div class="doing-thumb">
+                <img src="./images/doing/phone-laptop.jpg" width="370" height="294" alt="laptop" />
+                <h3 class="doing-subtitle">Мобільні додатки</h3>
+              </div>
             </li>
 
             <li class="doing-item">
-              <img src="./images/doing/tablet.jpg" width="370" height="294" alt="tablet" />
+              <div class="doing-thumb">
+                <img src="./images/doing/tablet.jpg" width="370" height="294" alt="tablet" />
+                <h3 class="doing-subtitle">Дизайнерські рішення</h3>
+              </div>
             </li>
           </ul>
         </div>
@@ -174,7 +183,7 @@
                 alt="designer"
               />
               <div class="member-content">
-                <h3 class="member-title">Игорь Демьяненко</h3>
+                <h3 class="member-title">Ігор Дем`яненко</h3>
                 <p lang="en" class="member-position">Product Designer</p>
                 <ul class="social-items">
                   <li class="social-item">
@@ -238,7 +247,7 @@
                 alt="developer"
               />
               <div class="member-content">
-                <h3 class="member-title">Ольга Репина</h3>
+                <h3 class="member-title">Ольга Репіна</h3>
                 <p lang="en" class="member-position">Frontend Developer</p>
                 <ul class="social-items">
                   <li class="social-item">
@@ -302,7 +311,7 @@
                 alt="marketing"
               />
               <div class="member-content">
-                <h3 class="member-title">Николай Тарасов</h3>
+                <h3 class="member-title">Микола Тарасов</h3>
                 <p lang="en" class="member-position">Marketing</p>
                 <ul class="social-items">
                   <li class="social-item">
@@ -366,7 +375,7 @@
                 alt="ui-designer"
               />
               <div class="member-content">
-                <h3 class="member-title">Михаил Ермаков</h3>
+                <h3 class="member-title">Михайло Єрмаков</h3>
                 <p lang="en" class="member-position">UI Designer</p>
                 <ul class="social-items">
                   <li class="social-item">
@@ -428,7 +437,7 @@
 
       <section class="section clients">
         <div class="container">
-          <h2 class="clients-title">Постоянные клиенты</h2>
+          <h2 class="clients-title">Постійні клієнти</h2>
           <ul class="clients-items">
             <li class="clients-item">
               <a href="" target="_blank" rel="noopener norefferer" class="clients-link">
@@ -492,7 +501,7 @@
               target="blank_"
               rel="noopener nofollow noreferrer"
             >
-              г. Киев, пр-т Леси Украинки, 26
+              м. Київ, пр-т Лесі Українки, 26
             </a>
             <ul class="footer-address">
               <li class="footer-item">
@@ -505,7 +514,7 @@
           </address>
         </div>
         <div class="socials">
-          <h3 class="social-title">присоединяйтесь</h3>
+          <h3 class="social-title">приєднуйтесь</h3>
           <ul class="social-items">
             <li class="social-item">
               <a
