--- a/portfolio.html
+++ b/portfolio.html
@@ -28,11 +28,9 @@
 
         <nav class="navigation">
           <ul class="nav-menu">
-            <li class="nav-item"><a class="nav-link" href="./index.html">Студия</a></li>
-            <li class="nav-item">
-              <a class="nav-link active" href="./portfolio.html">Портфолио</a>
-            </li>
-            <li class="nav-item"><a class="nav-link" href="#contacts">Контакты</a></li>
+            <li class="nav-item"><a class="nav-link active" href="./index.html">Студія</a></li>
+            <li class="nav-item"><a class="nav-link" href="./portfolio.html">Портфоліо</a></li>
+            <li class="nav-item"><a class="nav-link" href="#contacts">Контакти</a></li>
           </ul>
         </nav>
 
@@ -233,7 +231,7 @@
               target="blank_"
               rel="noopener nofollow noreferrer"
             >
-              г. Киев, пр-т Леси Украинки, 26
+              м. Київ, пр-т Лесі Українки, 26
             </a>
             <ul class="footer-address">
               <li class="footer-item">
@@ -246,7 +244,7 @@
           </address>
         </div>
         <div class="socials">
-          <h3 class="social-title">присоединяйтесь</h3>
+          <h3 class="social-title">приєднуйтесь</h3>
           <ul class="social-items">
             <li class="social-item">
               <a
@@ -255,7 +253,7 @@
                 rel="noopener norefferer"
                 class="social-link"
               >
-                <svg class="social-icon">
+                <svg class="social-icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
@@ -267,7 +265,7 @@
                 rel="noopener norefferer"
                 class="social-link"
               >
-                <svg class="social-icon">
+                <svg class="social-icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
@@ -279,7 +277,7 @@
                 rel="noopener norefferer"
                 class="social-link"
               >
-                <svg class="social-icon">
+                <svg class="social-icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
@@ -291,7 +289,7 @@
                 rel="noopener norefferer"
                 class="social-link"
               >
-                <svg class="social-icon">
+                <svg class="social-icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
