--- a/index.html
+++ b/index.html
@@ -144,21 +144,21 @@
           <h2 class="doing-title">Чим ми займаємося</h2>
           <ul class="doing-items">
             <li class="doing-item">
-              <div class="doing-thumb">
+              <div class="doing-direct">
                 <img src="./images/doing/working-table.jpg" width="370" height="294" alt="table" />
                 <h3 class="doing-subtitle">Десктопні додатки</h3>
               </div>
             </li>
 
             <li class="doing-item">
-              <div class="doing-thumb">
+              <div class="doing-direct">
                 <img src="./images/doing/phone-laptop.jpg" width="370" height="294" alt="laptop" />
                 <h3 class="doing-subtitle">Мобільні додатки</h3>
               </div>
             </li>
 
             <li class="doing-item">
-              <div class="doing-thumb">
+              <div class="doing-direct">
                 <img src="./images/doing/tablet.jpg" width="370" height="294" alt="tablet" />
                 <h3 class="doing-subtitle">Дизайнерські рішення</h3>
               </div>
