--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ua">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -28,8 +28,10 @@
 
         <nav class="navigation">
           <ul class="nav-menu">
-            <li class="nav-item"><a class="nav-link active" href="./index.html">Студія</a></li>
-            <li class="nav-item"><a class="nav-link" href="./portfolio.html">Портфоліо</a></li>
+            <li class="nav-item"><a class="nav-link" href="./index.html">Студія</a></li>
+            <li class="nav-item">
+              <a class="nav-link active" href="./portfolio.html">Портфоліо</a>
+            </li>
             <li class="nav-item"><a class="nav-link" href="#contacts">Контакти</a></li>
           </ul>
         </nav>
@@ -68,9 +70,9 @@
             <li class="work-btn-item">
               <button type="button" class="work-btn active-btn">Все</button>
             </li>
-            <li class="work-btn-item"><button type="button" class="work-btn">Веб-сайты</button></li>
+            <li class="work-btn-item"><button type="button" class="work-btn">Веб-сайти</button></li>
             <li class="work-btn-item">
-              <button type="button" class="work-btn">Приложения</button>
+              <button type="button" class="work-btn">Додатки</button>
             </li>
             <li class="work-btn-item"><button type="button" class="work-btn">Дизайн</button></li>
             <li class="work-btn-item"><button type="button" class="work-btn">Маркетинг</button></li>
@@ -78,13 +80,23 @@
           <ul class="work-cards">
             <li class="work-card">
               <a class="work-link" href="">
-                <img
-                  class="work-img"
-                  src="./images/portfolio/laptop.jpg"
-                  width="370"
-                  height="294"
-                  alt="technoquack"
-                />
+                <div class="work-direct">
+                  <img
+                    class="work-img"
+                    src="./images/portfolio/laptop.jpg"
+                    width="370"
+                    height="294"
+                    alt="technoquack"
+                  />
+                  <div class="work-overlay">
+                    <p class="overlay-desc">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
+
                 <div class="text-wrp">
                   <h2 class="work-card-title">Технокряк</h2>
                   <p class="work-card-descr">Веб-сайт</p>
@@ -93,13 +105,23 @@
             </li>
             <li class="work-card">
               <a class="work-link" href="">
-                <img
-                  class="work-img"
-                  src="./images/portfolio/sport.jpg"
-                  width="370"
-                  height="294"
-                  alt="poster"
-                />
+                <div class="work-direct">
+                  <img
+                    class="work-img"
+                    src="./images/portfolio/sport.jpg"
+                    width="370"
+                    height="294"
+                    alt="poster"
+                  />
+                  <div class="work-overlay">
+                    <p class="overlay-desc">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
+
                 <div class="text-wrp">
                   <h2 class="work-card-title">Постер New Orlean vs Golden Star</h2>
                   <p class="work-card-descr">Дизайн</p>
@@ -108,58 +130,98 @@
             </li>
             <li class="work-card">
               <a class="work-link" href="">
-                <img
-                  class="work-img"
-                  src="./images/portfolio/restaurant.jpg"
-                  width="370"
-                  height="294"
-                  alt="restaurant"
-                />
+                <div class="work-direct">
+                  <img
+                    class="work-img"
+                    src="./images/portfolio/restaurant.jpg"
+                    width="370"
+                    height="294"
+                    alt="restaurant"
+                  />
+                  <div class="work-overlay">
+                    <p class="overlay-desc">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
+
                 <div class="text-wrp">
                   <h2 class="work-card-title">Ресторан Seafood</h2>
-                  <p class="work-card-descr">Приложение</p>
+                  <p class="work-card-descr">Додаток</p>
                 </div>
               </a>
             </li>
             <li class="work-card">
               <a class="work-link" href="">
-                <img
-                  class="work-img"
-                  src="./images/portfolio/headphones.jpg"
-                  width="370"
-                  height="294"
-                  alt="headphones"
-                />
+                <div class="work-direct">
+                  <img
+                    class="work-img"
+                    src="./images/portfolio/headphones.jpg"
+                    width="370"
+                    height="294"
+                    alt="headphones"
+                  />
+                  <div class="work-overlay">
+                    <p class="overlay-desc">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
+
                 <div class="text-wrp">
-                  <h2 class="work-card-title">Проект Prime</h2>
+                  <h2 class="work-card-title">Проєкт Prime</h2>
                   <p class="work-card-descr">Маркетинг</p>
                 </div>
               </a>
             </li>
             <li class="work-card">
               <a class="work-link" href="">
-                <img
-                  class="work-img"
-                  src="./images/portfolio/boxes.jpg"
-                  width="370"
-                  height="294"
-                  alt="boxes"
-                />
+                <div class="work-direct">
+                  <img
+                    class="work-img"
+                    src="./images/portfolio/boxes.jpg"
+                    width="370"
+                    height="294"
+                    alt="boxes"
+                  />
+                  <div class="work-overlay">
+                    <p class="overlay-desc">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
+
                 <div class="text-wrp">
-                  <h2 class="work-card-title">Проект Boxes</h2>
-                  <p class="work-card-descr">Приложение</p>
+                  <h2 class="work-card-title">Проєкт Boxes</h2>
+                  <p class="work-card-descr">Додаток</p>
                 </div>
               </a>
             </li>
             <li class="work-card">
               <a class="work-link" href="">
-                <img
-                  class="work-img"
-                  src="./images/portfolio/imac.jpg"
-                  width="370"
-                  height="294"
-                  alt="inspiration"
-                />
+                <div class="work-direct">
+                  <img
+                    class="work-img"
+                    src="./images/portfolio/imac.jpg"
+                    width="370"
+                    height="294"
+                    alt="inspiration"
+                  />
+                  <div class="work-overlay">
+                    <p class="overlay-desc">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
+
                 <div class="text-wrp">
                   <h2 lang="en" class="work-card-title">Inspiration</h2>
                   <p class="work-card-descr">Веб-сайт</p>
@@ -168,46 +230,76 @@
             </li>
             <li class="work-card">
               <a class="work-link" href="">
-                <img
-                  class="work-img"
-                  src="./images/portfolio/limited.jpg"
-                  width="370"
-                  height="294"
-                  alt="limited"
-                />
+                <div class="work-direct">
+                  <img
+                    class="work-img"
+                    src="./images/portfolio/limited.jpg"
+                    width="370"
+                    height="294"
+                    alt="limited"
+                  />
+                  <div class="work-overlay">
+                    <p class="overlay-desc">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
+
                 <div class="text-wrp">
-                  <h2 class="work-card-title">Издание Limited Edition</h2>
+                  <h2 class="work-card-title">Видання Limited Edition</h2>
                   <p class="work-card-descr">Дизайн</p>
                 </div>
               </a>
             </li>
             <li class="work-card">
               <a class="work-link" href="">
-                <img
-                  class="work-img"
-                  src="./images/portfolio/lab.jpg"
-                  width="370"
-                  height="294"
-                  alt="lab"
-                />
+                <div class="work-direct">
+                  <img
+                    class="work-img"
+                    src="./images/portfolio/lab.jpg"
+                    width="370"
+                    height="294"
+                    alt="lab"
+                  />
+                  <div class="work-overlay">
+                    <p class="overlay-desc">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
+
                 <div class="text-wrp">
-                  <h2 class="work-card-title">Проект LAB</h2>
+                  <h2 class="work-card-title">Проєкт LAB</h2>
                   <p class="work-card-descr">Маркетинг</p>
                 </div>
               </a>
             </li>
             <li class="work-card">
               <a class="work-link" href="">
-                <img
-                  class="work-img"
-                  src="./images/portfolio/growing.jpg"
-                  width="370"
-                  height="294"
-                  alt="growing"
-                />
+                <div class="work-direct">
+                  <img
+                    class="work-img"
+                    src="./images/portfolio/growing.jpg"
+                    width="370"
+                    height="294"
+                    alt="growing"
+                  />
+                  <div class="work-overlay">
+                    <p class="overlay-desc">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
+
                 <div class="text-wrp">
                   <h2 lang="en" class="work-card-title">Growing Business</h2>
-                  <p class="work-card-descr">Приложение</p>
+                  <p class="work-card-descr">Додаток</p>
                 </div>
               </a>
             </li>
